feat(api): Get basic server info

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,5 +1,9 @@
 archivesBaseName = "${rootProject.name}-core"
 
-dependencies {
+repositories {
+    mavenCentral()
+}
 
+dependencies {
+    implementation 'com.google.code.gson:gson:2.11.0'
 }
