feat: Login with access key & logout & sidebar & about page & some basic layout

--- a/bukkit-1.21.5/src/main/resources/plugin.yml
+++ b/bukkit-1.21.5/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: OPanel
 version: ${project.version}
 main: net.opanel.bukkit_1_21_5.Main
-description:
+description: A Minecraft server management panel
 author: NriotHrreion
 website:
 api-version: '1.21.5'
