--- a/core/build.gradle
+++ b/core/build.gradle
@@ -6,4 +6,5 @@ repositories {
 
 dependencies {
     implementation 'com.google.code.gson:gson:2.11.0'
+    implementation 'com.github.oshi:oshi-core:6.8.2'
 }
