--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^6.0.0",
+    "date-format-parse": "^0.2.7",
     "lucide-react": "^0.522.0",
     "md5": "^2.3.0",
     "next": "15.3.4",
