--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'java-library'
+}
+
 archivesBaseName = "${rootProject.name}-core"
 
 repositories {
@@ -6,7 +10,7 @@ repositories {
 
 dependencies {
     implementation 'com.google.code.gson:gson:2.11.0'
-    implementation 'com.github.oshi:oshi-core:6.8.2'
+    api 'com.github.oshi:oshi-core:6.8.2'
     implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
     implementation 'org.eclipse.jetty:jetty-server:11.0.15'
     implementation 'org.eclipse.jetty:jetty-servlet:11.0.15'
