--- a/fabric-1.21.5/build.gradle
+++ b/fabric-1.21.5/build.gradle
@@ -1,12 +1,27 @@
+//buildscript {
+//    repositories {
+//        mavenCentral()
+//    }
+//    dependencies {
+//        classpath 'com.guardsquare:proguard-gradle:7.7.0'
+//    }
+//}
+
 plugins {
     id 'fabric-loom' version '1.10-SNAPSHOT'
+    id 'com.gradleup.shadow' version '8.3.8'
+}
+
+configurations {
+    shadowImplementation
+    implementation.extendsFrom(shadowImplementation)
 }
 
 version = "${rootProject.version}"
 group = "${rootProject.group}"
 
 base {
-    archivesName = "opanel"
+    archivesName = 'opanel'
 }
 
 loom {
@@ -33,7 +48,33 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:0.127.1+1.21.5"
     include(modImplementation("space.nocp:configx:2.0.1"))
 
-    implementation(include(project(":core")))
+    shadowImplementation(project(":core")) {
+        // To avoid conflict
+        exclude group: 'com.github.oshi', module: 'oshi-core'
+    }
+
+    modImplementation "com.github.oshi:oshi-core:6.8.2"
+}
+
+shadowJar {
+    configurations = [project.configurations.shadowImplementation]
+
+    archiveBaseName = baseName +"-shadow"
+    archiveClassifier = ''
+
+    relocate 'com.google.gson', 'net.opanel.deps.gson'
+    relocate 'org.objectweb.asm', 'net.opanel.deps.objectweb.asm'
+
+    exclude 'META-INF/*.SF'
+    exclude 'META-INF/*.DSA'
+    exclude 'META-INF/*.RSA'
+}
+
+remapJar {
+    dependsOn shadowJar
+    mustRunAfter shadowJar
+    inputFile = shadowJar.archiveFile
+    archiveBaseName = baseName
 }
 
 processResources {
@@ -50,3 +91,22 @@ java {
     sourceCompatibility = JavaVersion.VERSION_21
     targetCompatibility = JavaVersion.VERSION_21
 }
+
+//task('proguard', type: proguard.gradle.ProGuardTask) {
+//    configuration 'proguard.pro'
+//
+//    injars shadowJar.archiveFile
+//    outjars('build/libs/'+ baseName +'-'+ version +'-minimized.jar')
+//
+//    libraryjars "${System.getProperty('java.home')}/jmods/java.base.jmod"
+//
+//    //dontshrink()
+//    dontoptimize()
+//    //dontobfuscate()
+//    dontpreverify()
+////    keep 'public class com.yourcompany.Main { public static void main(java.lang.String[]); }'
+//    ignorewarnings()
+//}
+//
+//proguard.dependsOn shadowJar
+//assemble.dependsOn proguard
