--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "downloadjs": "^1.4.7",
     "lucide-react": "^0.522.0",
     "md5": "^2.3.0",
+    "minecraft-skin-viewer": "^0.0.10",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
