lint: Add `eslint-plugin-import` rules

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "@types/textarea-caret": "^3.0.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "eslint-plugin-import": "^2.32.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
