docs: Add "build from source" section in CONTRIBUTING & config(gradle): Add `-build-` string inside the runnable built jar files

--- a/bukkit-1.21.5/build.gradle
+++ b/bukkit-1.21.5/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 }
 
 shadowJar {
-    archiveBaseName = baseName
+    archiveBaseName = baseName +"-build"
     archiveClassifier = ''
 
     relocate 'com.google.gson', 'net.opanel.deps.gson'
