--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-context-menu": "^2.2.15",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -41,6 +42,7 @@
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "textarea-caret": "^3.1.0",
+    "upload": "^1.3.2",
     "zod": "^3.25.67"
   },
   "devDependencies": {
