feat(bukkit): Split bukkit module into paper and spigot & Complete paper and spigot implementation & fix: nbt-api cannot be packaged into jar during compilation

--- a/spigot-1.21.5/src/main/resources/plugin.yml
+++ b/spigot-1.21.5/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: OPanel
-version: ${project.version}
-main: net.opanel.bukkit_1_21_5.Main
+version: 1.0.0
+main: net.opanel.spigot_1_21_5.Main
 description: A Minecraft server management panel
 author: NriotHrreion
 website:
