--- a/spigot-1.21.5/build.gradle
+++ b/spigot-1.21.5/build.gradle
@@ -24,6 +24,7 @@ archivesBaseName = "${rootProject.name}-spigot"
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.21.5-R0.1-SNAPSHOT'
     shadowImplementation "de.tr7zw:item-nbt-api:2.15.1"
+    compileOnly "org.apache.logging.log4j:log4j-core:2.24.1"
 
     shadowImplementation(project(":core")) {
         // To avoid conflict
