--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,11 +10,13 @@ jobs:
     strategy:
       matrix:
         node-version: [20.x]
+    
+    defaults:
+      run:
+        working-directory: ./frontend
 
     steps:
     - uses: actions/checkout@v2
-    - run: cd frontend
-
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
