--- a/spigot-1.21.5/build.gradle
+++ b/spigot-1.21.5/build.gradle
@@ -22,7 +22,7 @@ repositories {
 archivesBaseName = "${rootProject.name}-spigot"
 
 dependencies {
-    compileOnly 'org.spigotmc:spigot-api:1.21.5-R0.1-SNAPSHOT'
+    compileOnly "org.spigotmc:spigot-api:${minecraft_version}-R0.1-SNAPSHOT"
     shadowImplementation "de.tr7zw:item-nbt-api:2.15.1"
     compileOnly "org.apache.logging.log4j:log4j-core:2.24.1"
 
@@ -39,6 +39,7 @@ shadowJar {
 
     archiveBaseName = baseName +"-build"
     archiveClassifier = ''
+    destinationDirectory = file "../build/libs"
 
     relocate 'com.google.gson', 'net.opanel.deps.gson'
     relocate 'org.objectweb.asm', 'net.opanel.deps.objectweb.asm'
@@ -48,6 +49,18 @@ shadowJar {
     exclude 'META-INF/*.SF'
     exclude 'META-INF/*.DSA'
     exclude 'META-INF/*.RSA'
+}
+
+tasks.named('processResources', ProcessResources) {
+    var replaceProperties = [
+            version: project.version,
+            minecraft_version: minecraft_version
+    ]
+    inputs.properties replaceProperties
+
+    filesMatching("plugin.yml") {
+        expand replaceProperties + [project: project]
+    }
 }
 
 build {
