--- a/spigot-1.21.5/src/main/resources/plugin.yml
+++ b/spigot-1.21.5/src/main/resources/plugin.yml
@@ -5,3 +5,8 @@ description: A Minecraft server management panel
 author: NriotHrreion
 website:
 api-version: ${minecraft_version}
+
+commands:
+  opanel:
+    description: Get status or about info of OPanel
+    usage: /opanel [about|status]
