fix(bukkit): /opanel command throws error when being executed without arg & /opanel command can be executed by non-operators

--- a/spigot-1.21.5/src/main/resources/plugin.yml
+++ b/spigot-1.21.5/src/main/resources/plugin.yml
@@ -10,3 +10,4 @@ commands:
   opanel:
     description: Get status or about info of OPanel
     usage: /opanel [about|status]
+    permission: opanel.command.opanel
