fix(ci): gradlew permission denied

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,8 @@ jobs:
         distribution: "microsoft"
     - name: Use Gradle
       uses: gradle/actions/setup-gradle@v4
+    - name: Change wrapper permissions
+      run: chmod +x ./gradlew
 
     - name: Building jar files
       run: ./gradlew build
