--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,3 +50,8 @@ jobs:
 
     - name: Building jar files
       run: ./gradlew build
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: opanel-jars
+        path: ./build/libs/*
