--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build
 on: [push, pull_request]
 
 jobs:
-  test:
+  frontend:
 
     runs-on: ubuntu-latest
 
@@ -16,9 +16,9 @@ jobs:
         working-directory: ./frontend
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
@@ -27,3 +27,31 @@ jobs:
 
     - name: Test building frontend
       run: npm run build
+
+  jar:
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        java-version: [21]
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Use JDK ${{ matrix.java-version }}
+      uses: actions/setup-java@v4
+      with:
+        java-version: ${{ matrix.java-version }}
+        distribution: "microsoft"
+    - name: Use Gradle
+      uses: gradle/actions/setup-gradle@v4
+    - name: Change wrapper permissions
+      run: chmod +x ./gradlew
+
+    - name: Building jar files
+      run: ./gradlew build
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: opanel-jars
+        path: ./build/libs/*
