--- a/settings.gradle
+++ b/settings.gradle
@@ -4,9 +4,17 @@ pluginManagement {
             name = 'Fabric'
             url = 'https://maven.fabricmc.net/'
         }
+        maven {
+            name = 'Neoforge'
+            url = 'https://maven.neoforged.net/releases'
+        }
         mavenCentral()
         gradlePluginPortal()
     }
+}
+
+plugins {
+    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.9.0'
 }
 
 rootProject.name = 'opanel'
@@ -18,3 +26,4 @@ include 'forge-1.21.5'
 include 'fabric-1.21.8'
 include 'forge-1.21.8'
 include 'spigot-1.21.8'
+include 'neoforge-1.21.8'
