--- a/spigot-1.21/src/main/resources/plugin.yml
+++ b/spigot-1.21/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: OPanel
 version: ${version}
-main: net.opanel.spigot_1_21_5.Main
+main: net.opanel.spigot_1_21.Main
 description: A Minecraft server management panel
 author: NriotHrreion
 website:
