--- a/settings.gradle
+++ b/settings.gradle
@@ -24,5 +24,6 @@ include 'fabric-1.21.5'
 include 'fabric-1.21.8'
 include 'forge-1.21.5'
 include 'forge-1.21.8'
+include 'neoforge-1.21'
 include 'neoforge-1.21.5'
 include 'spigot-1.21'
