--- a/settings.gradle
+++ b/settings.gradle
@@ -21,6 +21,7 @@ rootProject.name = 'opanel'
 
 include 'core'
 include 'fabric-1.21.5'
+include 'forge-1.21'
 include 'forge-1.21.5'
 include 'forge-1.21.8'
 include 'neoforge-1.21'
