--- a/settings.gradle
+++ b/settings.gradle
@@ -22,6 +22,7 @@ rootProject.name = 'opanel'
 include 'core'
 include 'fabric-1.21.5'
 include 'forge-1.21'
+include 'forge-1.21.3'
 include 'forge-1.21.5'
 include 'forge-1.21.8'
 include 'neoforge-1.21'
