--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
       run: chmod +x ./gradlew
 
     - name: Building jar files
-      run: ./gradlew build
+      run: ./gradlew build --refresh-dependencies --stacktrace
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
