--- a/fabric-1.21.5/gradle.properties
+++ b/fabric-1.21.5/gradle.properties
@@ -1,4 +1,5 @@
 baseName=opanel-fabric-1.21.5
 minecraft_version=1.21.5
+yarn_mappings=1.21.5+build.1
 fabric_loader_version=0.16.14
 fabric_api_version=0.127.1
