feat(bukkit): Add support for 1.20.x

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -39,3 +39,5 @@ tasks.register('generateOPanelProperties') {
 processResources {
     dependsOn generateOPanelProperties
 }
+
+sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = JavaLanguageVersion.of(17)
