--- a/fabric-1.21.5/build.gradle
+++ b/fabric-1.21.5/build.gradle
@@ -84,7 +84,6 @@ tasks.named('processResources', ProcessResources) {
 
 java {
     withSourcesJar()
-
-    sourceCompatibility = JavaVersion.VERSION_21
-    targetCompatibility = JavaVersion.VERSION_21
 }
+
+sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = JavaLanguageVersion.of(21)
