--- a/forge-1.21.5/build.gradle
+++ b/forge-1.21.5/build.gradle
@@ -109,3 +109,5 @@ sourceSets.each {
     it.output.resourcesDir = dir
     it.java.destinationDirectory = dir
 }
+
+sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = JavaLanguageVersion.of(21)
