--- a/neoforge-1.21.5/build.gradle
+++ b/neoforge-1.21.5/build.gradle
@@ -80,3 +80,5 @@ sourceSets.each {
     it.output.resourcesDir = dir
     it.java.destinationDirectory = dir
 }
+
+sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = JavaLanguageVersion.of(21)
