--- a/settings.gradle
+++ b/settings.gradle
@@ -28,4 +28,5 @@ include 'forge-1.21.3'
 include 'forge-1.21.5'
 include 'forge-1.21.8'
 include 'neoforge-1.21.5'
+include 'spigot-1.20'
 include 'spigot-1.21'
