fix(neoforge): Missing languageVersion in gradle.build

--- a/neoforge-1.21.5/build.gradle
+++ b/neoforge-1.21.5/build.gradle
@@ -82,3 +82,9 @@ sourceSets.each {
 }
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = JavaLanguageVersion.of(21)
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
