--- a/settings.gradle
+++ b/settings.gradle
@@ -21,6 +21,7 @@ rootProject.name = 'opanel'
 
 include 'core'
 include 'fabric-1.20.1'
+include 'fabric-1.20.4'
 include 'fabric-1.21'
 include 'fabric-1.21.2'
 include 'fabric-1.21.5'
