feat(forge): Add support for 1.20.1-1.20.4

--- a/settings.gradle
+++ b/settings.gradle
@@ -25,6 +25,9 @@ include 'fabric-1.20.4'
 include 'fabric-1.21'
 include 'fabric-1.21.2'
 include 'fabric-1.21.5'
+include 'forge-1.20.1'
+include 'forge-1.20.2'
+include 'forge-1.20.3'
 include 'forge-1.21'
 include 'forge-1.21.3'
 include 'forge-1.21.5'
