--- a/settings.gradle
+++ b/settings.gradle
@@ -28,6 +28,7 @@ include 'fabric-1.21.5'
 include 'forge-1.20.1'
 include 'forge-1.20.2'
 include 'forge-1.20.3'
+include 'forge-1.20.6'
 include 'forge-1.21'
 include 'forge-1.21.3'
 include 'forge-1.21.5'
