feat(folia): 添加对Folia 1.20的支持
添加Folia 1.20模块，包括核心功能实现、配置文件管理、命令处理、日志监听等功能
实现玩家管理、白名单、存档管理等接口适配
新增Folia特有的线程调度处理

--- a/forge-1.20.6/build.gradle
+++ b/forge-1.20.6/build.gradle
@@ -58,7 +58,10 @@ repositories {
 }
 
 dependencies {
-    minecraft("net.minecraftforge:forge:${minecraft_version}-${forge_version}")
+    minecraft("net.minecraftforge:forge:${minecraft_version}-${forge_version}") {
+        // Exclude problematic LWJGL native dependencies on macOS
+        exclude group: 'org.lwjgl', module: 'lwjgl-freetype'
+    }
 
     shadowImplementation(project(":core")) {
         // To avoid conflict
