--- a/folia-1.20/src/main/resources/plugin.yml
+++ b/folia-1.20/src/main/resources/plugin.yml
@@ -10,5 +10,5 @@ folia-supported: true
 commands:
   opanel:
     description: Get status or about info of OPanel
-    usage: /opanel [about|status]
+    usage: /opanel [about|status|start|stop]
     permission: opanel.command.opanel
