--- a/neoforge-1.21.5/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge-1.21.5/src/main/resources/META-INF/neoforge.mods.toml
@@ -4,7 +4,7 @@ issueTrackerURL="https://github.com/nocpiun/opanel/issues"
 modId="opanel"
 version="${mod_version}"
 displayName="OPanel"
-#displayURL="https://change.me.to.your.mods.homepage.example.invalid/"
+displayURL="https://opanel.cn"
 logoFile="icon.png"
 authors="NriotHrreion"
 description='''
